bug fix on firefox

--- a/style.css
+++ b/style.css
@@ -78,13 +78,17 @@
 /* front pane, placed above back */
 .front {
     z-index: 2;
-   /* for firefox 31 */
+    
+   /* for firefox */
+    transform: rotateX(0deg)
     display: inline-block;
     width: 100px;
     height: 100px;
 }
 /* back, initially hidden pane */
 .back {
+    /* again, for firefox... */
+    transform: rotateX(0deg)
     display: inline-block;
     width: 100px;
     height: 100px;
